feat: Player basic ability + `DamageUtils` custom damage + Delegate to SmpPlayer from events