@@ -1,16 +1,24 @@
 package com.roguesmp.player;
 
-import com.roguesmp.constant.Attributes;
-import com.roguesmp.constant.ComponentKeys;
-import com.roguesmp.constant.Enchants;
-import com.roguesmp.constant.EquipSlot;
+import com.roguesmp.constant.*;
+import com.roguesmp.event.DamageEvent;
 import com.roguesmp.item.SmpItem;
 import com.roguesmp.item.component.impl.EnchantComponent;
 import com.roguesmp.item.component.impl.EquipAttributeComponent;
+import com.roguesmp.player.ability.AbilityLoadout;
 import com.roguesmp.utils.Utils;
 import org.bukkit.Bukkit;
 import org.bukkit.entity.Player;
 import org.bukkit.entity.Projectile;
+import org.bukkit.event.block.Action;
+import org.bukkit.event.block.BlockBreakEvent;
+import org.bukkit.event.entity.EntityDeathEvent;
+import org.bukkit.event.entity.ProjectileHitEvent;
+import org.bukkit.event.entity.ProjectileLaunchEvent;
+import org.bukkit.event.player.PlayerExpChangeEvent;
+import org.bukkit.event.player.PlayerInteractEvent;
+import org.bukkit.event.player.PlayerItemConsumeEvent;
+import org.bukkit.event.player.PlayerSwapHandItemsEvent;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.Unmodifiable;
 
@@ -21,10 +29,13 @@ public class SmpPlayer {
     private final Map<Enchants, Integer> activeEnchants;
     private final Map<Attributes, Double> activeAttributes;
 
+    private final AbilityLoadout abilityLoadout;
+
     private final Map<UUID, PlayerProjectile> projectiles = new HashMap<>();
 
     public SmpPlayer(UUID uuid) {
         this.uuid = uuid;
+        abilityLoadout = new AbilityLoadout(this);
         activeEnchants = new EnumMap<>(Enchants.class);
         activeAttributes = new EnumMap<>(Attributes.class);
     }
@@ -106,14 +117,18 @@ public class SmpPlayer {
     }
 
     public @Unmodifiable Map<Enchants, Integer> getActiveEnchants() {
-        return Map.copyOf(activeEnchants);
+        return Collections.unmodifiableMap(activeEnchants);
     }
 
     public @Unmodifiable Map<Attributes, Double> getActiveAttributes() {
-        return Map.copyOf(activeAttributes);
+        return Collections.unmodifiableMap(activeAttributes);
     }
 
-    public @Nullable Player getPlayer() {
+    public AbilityLoadout getAbilityLoadout() {
+        return abilityLoadout;
+    }
+
+    public @Nullable Player getBukkitPlayer() {
         return Bukkit.getPlayer(uuid);
     }
 
@@ -127,5 +142,140 @@ public class SmpPlayer {
 
     public @Nullable PlayerProjectile untrackProjectile(UUID uuid) {
         return projectiles.remove(uuid);
+    }
+
+    public void tick(boolean twoHz, boolean oneHz) {
+        abilityLoadout.tick(oneHz, twoHz);
+        activeEnchants.forEach((enchants, integer) -> enchants.getEnchant().tick(this, integer, twoHz, oneHz));
+        activeAttributes.forEach((attributes, aDouble) -> attributes.getAttribute().tick(this, aDouble, twoHz, oneHz));
+
+    }
+
+    public void onInteract(PlayerInteractEvent event) {
+        Action action = event.getAction();
+        Player player = event.getPlayer();
+        if (action.isLeftClick()) {
+            if (player.isSneaking()) abilityLoadout.cast(AbilityTrigger.SHIFT_LEFT_CLICK);
+            else abilityLoadout.cast(AbilityTrigger.LEFT_CLICK);
+        } else if (action.isRightClick()) {
+            if (player.isSneaking()) abilityLoadout.cast(AbilityTrigger.SHIFT_RIGHT_CLICK);
+            else abilityLoadout.cast(AbilityTrigger.RIGHT_CLICK);
+        }
+    }
+
+    public void onSwapHand(PlayerSwapHandItemsEvent event) {
+        if (event.getPlayer().isSneaking()) abilityLoadout.cast(AbilityTrigger.SHIFT_SWAP);
+        else abilityLoadout.cast(AbilityTrigger.SWAP);
+        event.setCancelled(true);
+    }
+
+    /**
+     * Called when player melee damage entity, projectile is handled in {@link PlayerProjectile}
+     */
+    public void onDamageEntity(DamageEvent event) {
+        if (event.getDamager() instanceof Projectile projectile && projectile.getShooter() instanceof Player player) {
+            // Player damage an entity with projectile
+            PlayerProjectile playerProjectile = this.getProjectile(projectile.getUniqueId());
+            if (playerProjectile == null) return;
+            abilityLoadout.onDamageEntity(event);
+            playerProjectile.onDamageEntity(event);
+            return;
+        }
+
+        if (event.getDamager() instanceof Player) {
+            // Player damage (melee) an entity
+            abilityLoadout.onDamageEntity(event);
+            activeEnchants.forEach((enchants, integer) -> {
+                enchants.getEnchant().onDamageEntity(event, integer, this);
+            });
+            activeAttributes.forEach((attributes, aDouble) -> {
+                attributes.getAttribute().onDamageEntity(event, aDouble, this);
+            });
+        }
+
+    }
+
+    public void onKillEntity(EntityDeathEvent event) {
+        abilityLoadout.onKillEntity(event);
+        activeEnchants.forEach((enchants, integer) -> {
+            enchants.getEnchant().onKillEntity(event, integer, this);
+        });
+        activeAttributes.forEach((attributes, aDouble) -> {
+            attributes.getAttribute().onKillEntity(event, aDouble, this);
+        });
+    }
+
+    public void onHurt(DamageEvent event) {
+        getActiveEnchants().forEach((enchants, integer) -> {
+            enchants.getEnchant().onHurt(event, integer, this);
+        });
+        getActiveAttributes().forEach((attributes, aDouble) -> {
+            attributes.getAttribute().onHurt(event, aDouble, this);
+        });
+    }
+
+    public void onHurtFatal(DamageEvent event) {
+        abilityLoadout.onHurtFatal(event);
+        activeEnchants.forEach((enchants, integer) -> {
+            enchants.getEnchant().onHurtFatal(event, integer, this);
+        });
+        activeAttributes.forEach((attributes, aDouble) -> {
+            attributes.getAttribute().onHurtFatal(event, aDouble, this);
+        });
+    }
+
+    public void onConsume(PlayerItemConsumeEvent event) {
+        abilityLoadout.onConsume(event);
+        activeEnchants.forEach((enchants, integer) -> {
+            enchants.getEnchant().onConsume(event, integer, this);
+        });
+        activeAttributes.forEach((attributes, aDouble) -> {
+            attributes.getAttribute().onConsume(event, aDouble, this);
+        });
+    }
+
+    public void onExpChange(PlayerExpChangeEvent event) {
+        abilityLoadout.onExpChange(event);
+        activeEnchants.forEach((enchants, integer) -> {
+            enchants.getEnchant().onExpChange(event, integer, this);
+        });
+        activeAttributes.forEach((attributes, aDouble) -> {
+            attributes.getAttribute().onExpChange(event, aDouble, this);
+        });
+    }
+
+    public void onBlockBreak(BlockBreakEvent event) {
+        abilityLoadout.onBlockBreak(event);
+        activeEnchants.forEach((enchants, integer) -> {
+            enchants.getEnchant().onBlockBreak(event, integer, this);
+        });
+        activeAttributes.forEach((attributes, aDouble) -> {
+            attributes.getAttribute().onBlockBreak(event, aDouble, this);
+        });
+    }
+
+    public void onProjectileHit(ProjectileHitEvent event) {
+        PlayerProjectile playerProjectile = this.getProjectile(event.getEntity().getUniqueId());
+        if (playerProjectile == null) return;
+        abilityLoadout.onProjectileHit(event);
+        playerProjectile.onProjectileHit(event);
+        if (event.getHitBlock() != null) {
+            Utils.runLater(() -> this.untrackProjectile(event.getEntity().getUniqueId()));
+        }
+    }
+
+    public void onProjectileLaunch(ProjectileLaunchEvent event) {
+        Player player = getBukkitPlayer();
+        if (player == null) return;
+        if (player.isSneaking()) abilityLoadout.cast(AbilityTrigger.SHIFT_PROJECTILE);
+
+        event.getEntity().setPersistent(false);
+        this.trackProjectile(event.getEntity());
+        PlayerProjectile playerProjectile = this.getProjectile(event.getEntity().getUniqueId());
+        if (playerProjectile == null) return;
+        abilityLoadout.onProjectileLaunch(event);
+        playerProjectile.onProjectileLaunch(event);
+        // Untrack in case the projectile never hit anything
+        Utils.runLater(() -> this.untrackProjectile(event.getEntity().getUniqueId()), 20 * 10);
     }
 }
